--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   realm: ^2.3.0
   flutter_iconpicker: ^3.4.5
   flutter_colorpicker: ^1.1.0
+  flutter_bloc: ^8.1.5
+  equatable: ^2.0.5
 
   intl: any
 dev_dependencies:
