--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,8 +42,10 @@ dependencies:
   flutter_colorpicker: ^1.1.0
   flutter_bloc: ^8.1.5
   equatable: ^2.0.5
+  firebase_auth: ^5.0.0
 
   intl: any
+  firebase_core: ^3.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
