--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   equatable: ^2.0.5
   firebase_auth: ^5.0.0
 
-  intl: any
+  intl: ^0.18.1
   firebase_core: ^3.0.0
 dev_dependencies:
   flutter_test:
