--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_bloc: ^8.1.5
   equatable: ^2.0.5
   firebase_auth: ^5.0.0
+  cloud_firestore: ^5.0.0
 
   intl: ^0.18.1
   firebase_core: ^3.0.0
